--- a/css/styles.css
+++ b/css/styles.css
@@ -1,87 +1,115 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
+
 ul {
   list-style: none;
   padding: 0;
 }
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 img {
   max-width: 100%;
 }
+
 .wrapper {
   max-width: 870px;
   width: 100%;
   margin: 0 auto;
   padding: 0 5px;
 }
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .nav-list-item {
   display: inline-block;
   margin-right: 24px;
   font-weight: 400;
   color: #bf7506;
 }
+
 .nav-list-item:nth-last-child(1) {
   margin-right: 0;
 }
+
 .nav-list-item.active {
   font-weight: 700;
 }
+
 /* MAIN */
 .promo {
   display: flex;
   align-items: center;
 }
+
 .promo-avatar {
   width: 212px;
   height: 240px;
 }
+
 .promo-text {
-    max-width: 510px;
+  max-width: 510px;
 }
+
 .promo-text p {
   font-size: 48px;
   font-weight: 700;
 }
+
 .promo-heading {
   font-size: 24px;
   font-weight: 700;
   line-height: 135%;
 }
+
 .promo-heading-top {
   color: #bf7506;
 }
+
 .promo-socials {
   display: flex;
   align-items: center;
 }
+
 .promo-socials-list {
   margin-right: 60px;
 }
+
 .promo-socials-item {
   display: inline-block;
   vertical-align: middle;
   margin-right: 8px;
 }
+
 .promo-socials-item:nth-last-child(1) {
   margin-right: 0;
 }
+
 .cv-download-link {
   font-size: 16px;
   font-weight: 700;
   line-height: 150%;
 }
+
 .cv-download-link::before {
   content: url(../images/cv-icon.png);
+}
+
+.projects {
+  margin-bottom: 120px;
 }
 
 .projects-heading {
@@ -89,20 +117,24 @@ img {
   font-size: 48px;
   color: #bf7506;
 }
+
 .card-block {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .card {
   width: 400px;
 }
+
 .card-heading {
   font-weight: 700;
   font-size: 24px;
   line-height: 135%;
   color: #bf7506;
 }
+
 .using-techs-item {
   display: inline-block;
   font-weight: 400;
@@ -113,11 +145,13 @@ img {
   border-radius: 4px;
   padding: 5px 8px 4px;
 }
+
 .card-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
 }
+
 .card-examples-link {
   display: inline-block;
   margin-right: 25px;
@@ -125,9 +159,117 @@ img {
   font-size: 16px;
   line-height: 150%;
 }
+
 .code-link::before {
-    content: url(../images/code-icon.png);
+  content: url(../images/code-icon.png);
 }
+
 .demo-link::before {
-    content: url(../images/demo-icon.png);
+  content: url(../images/demo-icon.png);
+}
+
+/* ABOUT ME */
+.about {
+  margin-bottom: 120px;
+}
+
+.about-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.about-image {
+  max-width: 360px;
+  margin-right: 50px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.about-text {
+  max-width: 450px;
+}
+
+.about-text p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.about-text span {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 150%;
+  color: #bf7506;
+}
+
+.about-inter {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 135%;
+}
+
+.about-heading {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 125%;
+  color: #bf7506;
+}
+
+.sign-image {
+  width: 200px;
+  height: 75px;
+}
+
+.about-skills-heading {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 135%;
+  margin-bottom: 15px;
+}
+
+/* CONTACT FORM */
+.contact-form {
+  margin-bottom: 125px;
+}
+
+.form-wrapper {
+  max-width: 435px;
+  margin: 0 auto;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form input {
+  font-size: 28px;
+  height: 65px;
+  margin-bottom: 25px;
+}
+
+.form textarea {
+  resize: none;
+  height: 140px;
+  font-size: 28px;
+  margin-bottom: 25px;
+}
+
+.btn-submit {
+  width: 132px;
+  height: 36px;
+  padding: 7px 8px 5px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  border: none;
+  border-bottom: 2px solid #bf7506;
+  margin-left: auto;
+  
+}
+.btn-submit::before {
+  content: url(../images/submit-icon.svg);
 }
